[package]
name = "toke"
version = "0.1.0"
edition = "2021"
publish = ["artifactory"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
config = { version = "0.13.2", features = ["toml", "yaml"] }
daemonize-me = "2.0.1"
nix = "0.25.0"
strum = "0.24.1"
strum_macros = "0.24.3"
