[package]
name = "toket"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Vault token manager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
config = { version = "0.13.2", features = ["toml", "yaml"] }
daemonize-me = "2.0.1"
nix = "0.25.0"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
secret-service = "2.0.2"
serde = { version = "1.0.144", features = ["derive"] }
strum = "0.24.1"
strum_macros = "0.24.3"
users = "0.11.0"
xdg = "2.4.1"
